# nightingale

./: .gitignore  LICENSE  README.md  TODO.txt  dev_notes.txt  formatted.cpp  formatted.py  nightingale.rosinstall  unformatted.cpp  unformatted.py
.github/workflows/: black_lint.yml  clang-format-check.yml  colcon_compile_nightingale.yaml
debug/: CMakeLists.txt  package.xml
debug/src/: debug_action_client.py  debug_server.py
handoff/: CMakeLists.txt  package.xml
handoff/src/: MoveGroupInterface.py  move_to_action_server.py
nightingale_body/: CMakeLists.txt  package.xml  setup.py
nightingale_body/launch/: moveit_action_servers.launch
nightingale_body/src/: body_control.py
nightingale_bringup/: CMakeLists.txt  package.xml
nightingale_bringup/launch/: nightingale_system.launch
nightingale_demo/: CMakeLists.txt  package.xml
nightingale_demo/launch/: demo.launch
nightingale_demo/src/: main.py
nightingale_dispatcher/: CMakeLists.txt  package.xml  setup.py
nightingale_dispatcher/launch/: dispatcher.launch
nightingale_dispatcher/src/: main.py
nightingale_interface/: MovoConfig.py  README.md  main.py  screen_wrapper.py
nightingale_interface/screens/: admin_screen.py  confirmation_screen.py  empty.py  estopped.py  estopped_screen.py  extend_arm_screen.py  face_screen.py  home_screen.py  item_fill_screen.py  item_select_screen.py  item_selection.py  nurse_alert_screen.py  retract_arm_screen.py  screen_1.py  screen_2.py  screen_config.py  start_drive_screen.py  symposium_home_screen.py  video_call_screen.py  wait_item_get_screen.py  watchdog_screen.py
nightingale_interface/videos/: clock.mkv
nightingale_manipulation/: CMakeLists.txt  package.xml  payload.py  setup.py
nightingale_manipulation/launch/: moveit_action_servers.launch
nightingale_manipulation/src/: manipulation_control_test.py
nightingale_manipulation/src/nightingale_manipulation/: manipulation_action_client.py  planning_scene_interface.py  trajectory_intercept_server.py
nightingale_msgs/: CMakeLists.txt  package.xml
nightingale_msgs/action/: HumanPose.action  MissionPlan.action  PoseEstimation.action  RoomRunner.action  Task.action  move_to.action
nightingale_msgs/msg/: Payload.msg
nightingale_msgs/srv/: AddMissionPlan.srv  AddTaskDispatcher.srv  CancelTaskDispatcher.srv  InterfaceCall.srv  RobotConfigurationLookup.srv  RoomLookup.srv  RoomPoseLookup.srv
nightingale_navigation/: CMakeLists.txt  package.xml  younes_todo.txt
nightingale_navigation/configs/: amcl.yaml  costmap_common_params.yaml  costmap_global_map.yaml  costmap_local.yaml  eband_planner_params.yaml  global_planner_params.yaml  move_base_params.yaml  room_pose_lookup.yaml
nightingale_navigation/hallway_planner/: CMakeLists.txt  README.md  hp_plugin.xml  package.xml
nightingale_navigation/hallway_planner/include/hallway_planner/: astar.hpp  geometry_primitives.hpp  hallway_locator.hpp  hallway_planner.hpp
nightingale_navigation/hallway_planner/src/: astar.cpp  debug_hallway_planner_node.cpp  geometry_primitives.cpp  hallway_locator.cpp  hallway_planner.cpp
nightingale_navigation/hallway_planner/test/: test_astar.cpp  test_hallway_locator.cpp
nightingale_navigation/include/nightingale_navigation/: room_runner.hpp
nightingale_navigation/launch/: localization.launch  mapping.launch  move_base.launch  navigation.launch
nightingale_navigation/maps/lab/feb.1.23/: map.pgm  map.yaml
nightingale_navigation/maps/lab/jan.12.23/: map.pgm  map.yaml
nightingale_navigation/maps/sim_hospital/dec.23.22/: map.pgm
nightingale_navigation/nightingale_navigation/: README.md  package.xml
nightingale_navigation/nightingale_navigation/configs/: costmap_common_params.yaml  costmap_global_map.yaml  costmap_local.yaml  global_planner_params.yaml  hallway_planner_params.yaml  move_base_params.yaml
nightingale_navigation/nightingale_navigation/launch/: localization.launch  move_base.launch  navigation.launch
nightingale_navigation/nightingale_navigation/maps/sim_hospital/dec.23.22/: map.yaml
nightingale_navigation/nightingale_navigation/maps/sim_hospital/nov11.22/: map.pgm
nightingale_navigation/nightingale_navigation/src/: room_runner.py
nightingale_navigation/rviz/: visualization.rviz
nightingale_navigation/scripts/: base_drive_in_loop.py
nightingale_navigation/src/: lookup_room_pose.py  room_runner.cpp  room_runner.py  room_runner_node.cpp  test_do_not_merge.py
nightingale_payload/: CMakeLists.txt  analysis.py  calibrate.py  package.xml
nightingale_payload/src/: analysis.py  main.py
nightingale_perception/: CMakeLists.txt  README.md  package.xml  setup.py
nightingale_perception/config/: laser_scan_filter.yaml  movo_body_filter.yaml
nightingale_perception/launch/: human_pose_detection.launch  movo_body_filter.launch  pose_estimation.launch  pt_cloud_process.launch
nightingale_proprioception/: CMakeLists.txt  package.xml
nightingale_proprioception/launch/: calibration.launch  collision_detection.launch
nightingale_proprioception/src/: calibration.py  collision_detection.py
nightingale_ros_bridge/: CMakeLists.txt  package.xml  setup.py
nightingale_ros_bridge/launch/: interface.launch
nightingale_ros_bridge/src/: ros_bridge_interface.py
nightingale_simulation/: CMakeLists.txt  README.md  package.xml
nightingale_simulation/launch/: hospital.launch  simulation.launch
nightingale_simulation/scripts/: random_arm_articulation.py
nightingale_simulation/src/: basic_arm_articulation.py
nightingale_teleop/: CMakeLists.txt  README.md  package.xml
nightingale_teleop/launch/: keyboard.launch
nightingale_telop/: CMakeLists.txt  package.xml
nightingale_utils/: CMakeLists.txt  README.md  package.xml
nightingale_utils/configs/: robot_configuration_lookup.yaml  room_pose_lookup.yaml
nightingale_utils/launch/: room_pose_lookup.launch  utils.launch
nightingale_utils/src/: map_frame_visualizer.py  room_pose_lookup.py  utils.py
nightingale_visualization/: CMakeLists.txt  package.xml  viz.launch
ros_bridge_interface/: CMakeLists.txt  bridge_interface_config.py  package.xml
(+28 files in other folders)
