<?xml version="1.0"?>
<package format="2">
  <name>nightingale_bringup</name>
  <version>0.0.0</version>
  <description>The nightingale_bringup package</description>

  <maintainer email="yreda@uwaterloo.ca">Younes Reda</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nightingale_dispatcher</build_depend>
  <build_depend>nightingale_msgs</build_depend>
  <build_depend>nightingale_navigation</build_depend>
  <build_depend>nightingale_perception</build_depend>
  <build_depend>nightingale_ros_bridge</build_depend>
  <build_depend>nightingale_utils</build_depend>
  <build_export_depend>nightingale_dispatcher</build_export_depend>
  <build_export_depend>nightingale_msgs</build_export_depend>
  <build_export_depend>nightingale_navigation</build_export_depend>
  <build_export_depend>nightingale_perception</build_export_depend>
  <build_export_depend>nightingale_ros_bridge</build_export_depend>
  <build_export_depend>nightingale_utils</build_export_depend>
  <exec_depend>nightingale_dispatcher</exec_depend>
  <exec_depend>nightingale_navigation</exec_depend>
  <exec_depend>nightingale_perception</exec_depend>
  <exec_depend>nightingale_ros_bridge</exec_depend>
  <exec_depend>nightingale_utils</exec_depend>

</package>
