<?xml version="1.0"?>
<package format="2">
  <name>nightingale_manipulation</name>
  <version>0.0.0</version>
  <description>The nightingale_manipulation package</description>
  <maintainer email="bdschnapp@uwaterloo.ca">ben</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>moveit_action_handlers</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>moveit_action_handlers</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export>
  </export>
</package>
